# BackupSystem

./: README.md
BackupSystem/: CMakeLists.txt  main.cpp
BackupSystem/BACKUP/: Backup.cpp  Backup.h  BackupManager.cpp  BackupManager.h
BackupSystem/CLEANER/: Cleaner.cpp  Cleaner.h  CleanerSelector.cpp  CleanerSelector.h
BackupSystem/FILETYPE/: FileType.cpp  FileType.h
BackupSystem/RESTOREPOINT/: PointManager.cpp  PointManager.h  RestorePoint.cpp  RestorePoint.h  RestorePointSelector.cpp  RestorePointSelector.h
BackupSystem/RESTOREPOINT/DeltaPoint/: DeltaPoint.cpp  DeltaPoint.h
BackupSystem/RESTOREPOINT/FullPoint/: FullPoint.cpp  FullPoint.h
BackupSystem/TIME/: Time.cpp  Time.h
